# 25-NUEDC-C

./: README.md
code/jetson/GE/: CMakeLists.txt  compile.sh  pack.sh
code/jetson/GE/include/: main.h  process.h
code/jetson/GE/include/ge/: camera.h  control.h  image.h  model.h  uart.h
code/jetson/GE/lib/ge/: camera.cpp  control.cpp  image.cpp  model.cpp  uart.cpp
code/jetson/GE/src/: GE.code-workspace  main.cpp  process.cpp
code/jetson/GE/tool/LDC_tool/: CMakeLists.txt
code/jetson/GE/tool/LDC_tool/src/: GE_LDC_CAMERA.cpp  GE_LDC_IMAGE.cpp  GE_LDC_IMAGE.py
code/maixcam/: maixcam.py
code/maixcam/tool/: camera_calibration.npz  ge_ldc.py
